[project]
name = "flownav"
version = "0.1.0"
description = "Combining Flow Matching and Depth Priors for Efficient Navigation"
authors = [
    {name = "Samiran Gode", email = "samiran.gode@utn.de"},
    {name = "Abhijeet Nayak", email = "abhijeet.nayak@utn.de"},
    {name = "Debora Oliveira", email = "debora.oliveira@utn.de"},
]
dependencies = ["click>=8.2.1", "numpy==1.*", "torch>=2.7.1", "warmup-scheduler>=0.3", "torchvision>=0.22.1", "efficientnet-pytorch>=0.7.1", "torchcfm>=1.0.7", "wandb>=0.21.1", "diffusers==0.11.1", "diffusion-policy @ git+ssh://git@github.com/debOliveira/diffusion_policy.git@main", "einops>=0.8.1", "lmdb>=1.7.3", "depth-anything-v2 @ git+ssh://git@github.com/debOliveira/depth-anything-V2.git@main", "huggingface-hub==0.25.2"]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"


[tool.pdm]
distribution = true
